<resources>
    <string name="app_name">AndroidDemos</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_sms">SMSActivity</string>
    <string name="sms_phone">请输入电话号码</string>
    <string name="sms_content">请输入内容</string>
    <string name="send_message">发送短信</string>
    <string name="title_activity_advanced_component">AdvancedComponentActivity</string>
    <string name="title_activity_file_save_to_memory">FileSaveToMemoryActivity</string>
    <string name="userName">请输入姓名：</string>
    <string name="password">请输入密码：</string>
    <string name="forgetPassword">忘记密码</string>
    <string name="login">登录</string>
    <string name="highCompent">高级组件</string>
    <string name="store_data">数据存储</string>
    <string name="title_activity_auto_complete_text_view">AutoCompleteTextViewActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="main_dailBtn">打电话</string>
    <string name="main_storeBtn">文件存储</string>
    <string name="main_advancedCompent">高级组建</string>
    <string name="title_activity_spinner">SpinnerActivity</string>
    <string name="title_activity_date_time_picker">DateTimePickerActivity</string>
    <string name="title_activity_dates_picker">DatesPickerActivity</string>
    <string name="title_activity_time_picker_view">TimePickerView</string>
    <string name="title_activity_progress_bar">ProgressBar</string>
</resources>
