<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior" tools:showIn="@layout/activity_sms"
    tools:context="com.rongyu.wwt.androiddemos.SMSActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sms_phone"
        android:id="@+id/tv_phone"
        android:textSize="35px"
        android:textColor="#ff0000"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/et_sms_phone"
        android:layout_below="@id/tv_phone"
        android:layout_alignStart="@id/tv_phone"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/sms_content"
        android:id="@+id/tv_content"
        android:layout_below="@id/et_sms_phone"
        android:layout_alignStart="@id/et_sms_phone"
        android:layout_marginTop="34dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:lines="5"
        android:ems="10"
        android:id="@+id/et_sms_content"
        android:layout_below="@id/tv_content"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@id/et_sms_phone" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_message"
        android:id="@+id/sms_btn"
        android:layout_marginTop="47dp"
        android:layout_below="@+id/et_sms_content"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/highCompent"
        android:id="@+id/high_compent"
        android:layout_below="@id/sms_btn"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
